﻿[B]Changelog[/B]
* Fixed: Vier.be 'big'-teaser-card videos were not parsed (Fixes #925)

[I]Previous Changes[/I]
* Fixed: Some VTM streams would not play (Fixes #924)
* Fixed: Stievie.be (requires Kodi 18.x) (See #917)
* Fixed: VRT.nu updated the site again (Fixes #898)
* Fixed: VRT.nu updated the site (Fixes #898)
* Fixed: VRT.nu was missing those shows without a channel logo (Fixes #894)
* Fixed: Vier/vijf.be were missing some videos that appeared as highlighted on the pages (Fixes #892)
* Removed: all Stievie.be videos as they moved to encrypted DASH which is not supported by Kodi (See #878)
* Fixed: Vier/Vijf.be moved to new API and requires logging in (Fixes #888)
* Fixed: vrt.nu live streams were broken (Fixes #884)
* Fixed: no audio on VRT.nu streams (Fixes #880)
* Fixed: VRT.nu streams moved to Vualto plaform (Fixes #865)
* Fixed: KetNet listing broke (Fixes #866)
* Added: Stievie.be (Fixes #763)
* Added: Recent items to VTM (Fixes #827)
* Fixed: Some streams would start in the middle of a stream (Reverted #854) as it seems to be OK now
* Fixed: Paging for VTM would not work (only Q2)
* Fixed: VTM.be do no longer accept an empty range= header (Fixes #854)
* Changed: Combine HTML site (which only lists shows that have episode available) with the JSON API that has more recent videos per show (Fixes #848)
* Fixed: VTM and Q2 updated their sites which broke the channel (Fixes #846)
* Fixed: VRT.nu regex was causing performance issues (Fixes #842)
* Removed: Canvas as they are now 100% on VRT.nu
* Added: A bit more logging to the VTM.be channel (See #839)
* Fixed: Proper error in logging if VRT log in fails (See #818)
* Fixed: VTM and Q2 streams now always start at the beginning (Fixes #820)
* Added: VRT NU art for all included channels (See #823)
* Fixed: Vier/Vijf.be would also have the audio only streams (Fixes #822)
* Added: VRTnu.be now has listings per channels (Fixes #823)
* Added: VRT.NU dates and Live channels (See #810)
* Fixed: JSON parsing of VTM.be