@@ -1,7 +1,9 @@
 ﻿[B]Changelog[/B]
-* Fixed: Vier.be 'big'-teaser-card videos were not parsed (Fixes #925)
+* Fixed: added paging to Vier.be (Fixes #940)
+* Fixed: VTM and Q2 listing (Fixes #939)
 
 [I]Previous Changes[/I]
+* Fixed: Vier.be 'big'-teaser-card videos were not parsed (Fixes #925)
 * Fixed: Some VTM streams would not play (Fixes #924)
 * Fixed: Stievie.be (requires Kodi 18.x) (See #917)
 * Fixed: VRT.nu updated the site again (Fixes #898)
